--- a/projects-critique-connect.html
+++ b/projects-critique-connect.html
@@ -84,7 +84,7 @@
             I created Critique Connect because I wanted to combine my passions of what I learned in the book publishing world and the tech world. As a former writer and beta writer, I identified a pain point in the writing community: finding other writers and beta readers. There are other various online communities to do this but no good way to search or filter this content that often got lost, was disorganized, and sometimes missed crucial pieces of information. Critique Connect tries to mitigate all of this through user profiles with reviews, Work in Progress (WIP) pages, forum with <b>WYSIWYG</b> post editing, and search with <b>Algolia</b>. Critique Connect launched for open beta in April 20, 2019 and as of October 2019 had over 200 users.
           </p>
           <p>
-            Critique Connect was made with <b>React</b> hosted on a <b>Digital Ocean</b> droplet and used <b>Firebase</b> for database and authentication. I addressed <b>GDPR</b> concerns via a cookie banner and handled bug reports through Google Forms and Zapier integration to my <b>Trello</b> board.
+            Critique Connect was made with <b>React</b> hosted on a <b>Digital Ocean</b> droplet and used <b>Firebase</b> for database and authentication. I addressed <b>GDPR</b> concerns via a cookie banner and handled bug reports through Google Forms and Zapier integration to my <b>Trello</b> board. Integrated <b>Sentry</b> for error alerting.
           </p>
           <hr></hr>
           <h5>RELATED LINKS</h5>
