--- a/work-experience.html
+++ b/work-experience.html
@@ -20,9 +20,9 @@
             rel="stylesheet">
 
       <!-- Custom Fonts -->
-      <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" 
+      <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css"
             rel="stylesheet">
-      <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,100italic,300italic,400italic' 
+      <link href='https://fonts.googleapis.com/css?family=Lato:100,300,400,700,100italic,300italic,400italic'
             rel='stylesheet'
             type='text/css'>
       <script src="scripts/modernizr.js"></script>
@@ -104,13 +104,13 @@
     </footer>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="https://code.jquery.com/jquery.JavaScript"></script>
     <script src="js/jquery.panelslider.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
     <script src="js/script.js"></script>
-    <script src="http://malsup.github.com/jquery.cycle2.js"></script>
+    <script src="https://malsup.github.com/jquery.cycle2.js"></script>
 
   </body>
 </html>
